# hydra2dgpu

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CULVERT_INTEGRATION.md  GPU_AUDIT_REPORT.md  LICENSE  MOMENTUM_CAP_FIX.md  Makefile  README.md  USER_GUIDE.md  __init__.py  backwater2.py  backwater_model.py  backwater_plugin.py  backwater_qt.py  check_geometry.py  compare_hecras_backwater_iterations.py  culvert_routine.py  diag89.py  diagnose_head_loss.py  diagnostic_summary.txt  diagnostic_sweep.csv  find_commands.py  generate_hecras_project.py  geopackage_export_test.json  hec_init_check.py  hec_vs_backwater_iterations.csv  hec_vs_backwater_log.json  hec_vs_backwater_summary.csv  hydra_1d.py  hydra_plugin.py  hydra_qt.py  metadata.txt  native_backend.py  parameters.tex  patch_gpkg_weir.py  pyproject.toml  qgis_utils.py  (+70 more)
.agents/: mvp-architecture.md
.copilot/: codepde-agent.prompt.md  context.md
2d_example/: 2d_example_constraints_diag.json  2d_example_regions_only.json  2d_example_with_quad_edges.json  2d_example_with_quad_edges.msh  2d_example_with_quad_edges.npz  swe2d_model2.gpkg  swe2d_results.h5  swe2d_results_mdal.hdf
QML/: form_init.py  generate_all_layer_qmls.py  generate_structures_qml.py  structures.qml  swe2d_bc_lines.qml  swe2d_cn_zones.qml  swe2d_drainage_inlets.qml  swe2d_drainage_links.qml  swe2d_drainage_node_inlets.qml  swe2d_drainage_nodes.qml  swe2d_hydrographs.qml  swe2d_hyetographs.qml  swe2d_internal_flow_sources.qml  swe2d_manning_zones.qml  swe2d_rain_gages.qml  swe2d_sample_lines.qml  swe2d_storm_areas.qml  swe2d_structures.qml  swe2d_topo_arcs.qml  swe2d_topo_constraints.qml  swe2d_topo_nodes.qml  swe2d_topo_quad_edges.qml  swe2d_topo_regions.qml  test_value_map.qml
__pycache__/: unsteady_model._activation_factor_jit-346.py313.1.nbc  unsteady_model._activation_factor_jit-346.py313.nbi  unsteady_model._activation_factor_jit-385.py313.1.nbc  unsteady_model._activation_factor_jit-385.py313.nbi  unsteady_model._activation_factor_jit-394.py313.1.nbc  unsteady_model._activation_factor_jit-394.py313.nbi  unsteady_model._activation_factor_jit-407.py313.1.nbc  unsteady_model._activation_factor_jit-407.py313.nbi  unsteady_model._activation_factor_jit-416.py313.1.nbc  unsteady_model._activation_factor_jit-416.py313.nbi  unsteady_model._activation_factor_jit-419.py313.1.nbc  unsteady_model._activation_factor_jit-419.py313.nbi  unsteady_model._activation_factor_jit-434.py313.1.nbc  unsteady_model._activation_factor_jit-434.py313.nbi  unsteady_model._activation_factor_jit-437.py313.1.nbc  unsteady_model._activation_factor_jit-437.py313.nbi  unsteady_model._activation_factor_jit-440.py313.1.nbc  unsteady_model._activation_factor_jit-440.py313.nbi  unsteady_model._activation_factor_jit-446.py313.1.nbc  unsteady_model._activation_factor_jit-446.py313.nbi  unsteady_model._activation_factor_jit-449.py313.1.nbc  unsteady_model._activation_factor_jit-449.py313.nbi  unsteady_model._interp_linear_jit-320.py313.1.nbc  unsteady_model._interp_linear_jit-320.py313.nbi  unsteady_model._interp_linear_jit-359.py313.1.nbc  unsteady_model._interp_linear_jit-359.py313.nbi  unsteady_model._interp_linear_jit-368.py313.1.nbc  unsteady_model._interp_linear_jit-368.py313.nbi  unsteady_model._interp_linear_jit-381.py313.1.nbc  unsteady_model._interp_linear_jit-381.py313.nbi  unsteady_model._interp_linear_jit-390.py313.1.nbc  unsteady_model._interp_linear_jit-390.py313.nbi  unsteady_model._interp_linear_jit-393.py313.1.nbc  unsteady_model._interp_linear_jit-393.py313.nbi  unsteady_model._interp_linear_jit-408.py313.1.nbc  unsteady_model._interp_linear_jit-408.py313.nbi  unsteady_model._interp_linear_jit-411.py313.1.nbc  unsteady_model._interp_linear_jit-411.py313.nbi  unsteady_model._interp_linear_jit-414.py313.1.nbc  unsteady_model._interp_linear_jit-414.py313.nbi  (+26 more)
artifacts/: gmsh_conformity_postcheck_20260528_173536.json  gmsh_conformity_postcheck_20260528_175109.json  gmsh_transfinite_debug_swe3d_20260528_155210.json  headless_gui_gmsh_full_align_swe3d_20260528_115445.json  headless_gui_gmsh_full_align_swe3d_20260528_120152.json  headless_gui_gmsh_full_align_swe3d_20260528_120152.npz  headless_gui_gmsh_full_align_swe3d_20260528_120609.json  headless_gui_gmsh_full_align_swe3d_20260528_123259.json  headless_gui_gmsh_full_align_swe3d_20260528_123324.json  headless_gui_gmsh_full_align_swe3d_20260528_124543.json  headless_gui_gmsh_full_align_swe3d_20260528_124648.json  headless_gui_gmsh_full_align_swe3d_20260528_124648.npz  headless_gui_gmsh_full_align_swe3d_20260528_125649.json  headless_gui_gmsh_full_align_swe3d_20260528_130502.json  headless_gui_gmsh_full_align_swe3d_20260528_144345.json  headless_gui_gmsh_full_align_swe3d_20260528_144345.npz  headless_gui_gmsh_full_align_swe3d_20260528_145500.json  headless_gui_gmsh_full_align_swe3d_20260528_145500.npz  headless_gui_gmsh_full_align_swe3d_20260528_152405.json  headless_gui_gmsh_full_align_swe3d_20260528_152405.npz  headless_gui_gmsh_full_align_swe3d_20260528_153133.json  headless_gui_gmsh_full_align_swe3d_20260528_155854.json  headless_gui_gmsh_full_align_swe3d_20260528_155854.npz  headless_gui_gmsh_full_align_swe3d_20260528_172612.json  headless_gui_gmsh_full_align_swe3d_20260528_172612.npz  headless_gui_gmsh_full_align_swe3d_20260528_174224.json  headless_gui_gmsh_full_align_swe3d_20260528_174224.npz  headless_gui_gmsh_full_align_swe3d_20260528_215929.json  headless_gui_gmsh_full_align_swe3d_20260528_215929.npz  headless_gui_gmsh_full_align_swe3d_20260528_223221.json  headless_gui_gmsh_full_align_swe3d_20260528_223221.npz  headless_gui_gmsh_full_align_swe3d_20260528_233920.json  headless_gui_gmsh_full_align_swe3d_20260528_233920.npz  headless_gui_gmsh_full_align_swe3d_20260528_234018.json  headless_gui_gmsh_full_align_swe3d_20260528_234018.npz  headless_gui_gmsh_full_align_swe3d_20260528_234135.json  headless_gui_gmsh_full_align_swe3d_20260528_234228.json  headless_gui_gmsh_full_align_swe3d_20260528_234228.npz  headless_gui_gmsh_full_align_swe3d_20260529_000056.json  (+116 more)
build_debug/: Makefile
docs/: CLI_GUIDE.md  (+91 more)
(+950 files in other folders)
